Update Service - Add exceptions - Rewrite logic