@@ -1,10 +1,9 @@
 package com.intelliedu.intelliedu.exception;
 
-import java.time.LocalDate;
-import java.util.LinkedHashMap;
+import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpHeaders;
@@ -13,8 +12,11 @@ import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+
+import com.intelliedu.intelliedu.dto.ErrorDto;
 
 /**
  * ControllerAdvisor
@@ -22,21 +24,25 @@ import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExcep
 @ControllerAdvice
 public class ControllerAdvisor extends ResponseEntityExceptionHandler {
 
+  private Map<String, Object> createResponse(List<String> message, int status) {
+    List<ErrorDto> errorDto = message.stream().map(m -> new ErrorDto(status, HttpStatus.valueOf(status).getReasonPhrase(), m)).toList();
+    return Map.of(
+      "timestamp", LocalDateTime.now(),
+      "errors", errorDto
+    );
+  }
+
+  private Map<String, Object> createResponse(String message, int status) {
+    return createResponse(Arrays.asList(message), status);
+  }
+
+  @ExceptionHandler(NotFoundException.class)
+  public ResponseEntity<Object> handleNotFoundException(NotFoundException ex, WebRequest request) {
+    return ResponseEntity.badRequest().body(createResponse(ex.getMessage(), 404));
+  }
+
   @Override
-  protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex,
-          HttpHeaders headers, HttpStatusCode status, WebRequest request) {
-    List<String> message = ex
-      .getAllErrors()
-      .stream()
-      .map(DefaultMessageSourceResolvable::getDefaultMessage)
-      .collect(Collectors.toList());
-
-    Map<String, Object> body = new LinkedHashMap<>();
-    body.put("timestamp", LocalDate.now());
-    body.put("status", status.value());
-    body.put("error", HttpStatus.valueOf(status.value()).getReasonPhrase());
-    body.put("message", message);
-
-    return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST); 
+  protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
+    return ResponseEntity.badRequest().body(createResponse(ex.getAllErrors().stream().map(DefaultMessageSourceResolvable::getDefaultMessage).toList(), status.value()));
   }
 }
